--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -5,6 +5,7 @@
         "rootPatterns": ["compile_flags.txt", "compile_commands.json"],
         "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"]
       }
-    }
+    },
+    "python.formatting.provider": "black" 
 }
 
